--- a/style.css
+++ b/style.css
@@ -19,6 +19,15 @@ header{
     padding: 10px 10%;
 
 }
+
+.constheader{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    
+}
 nav{
     display: flex;
     justify-content: space-between;
