--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ header{
     z-index: 100;
     
 }
+#about {
+    margin-top: 100px;
 nav{
     display: flex;
     justify-content: space-between;
