--- a/style.css
+++ b/style.css
@@ -98,8 +98,8 @@ header span{
 }
 
 .header-text{
-    margin-top: 500px;
-    margin-left: 30px
+    padding-top: 500px;
+    padding-top: 30px
 }
 .about-col-1{
     flex-basis: 35%;
