fixed more bugs in css and html index

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ nav ul li a:hover::after{
 
 h1{
     font-size: 40px;
+    margin-top: 50px;
 }
 
 header p{
@@ -87,9 +88,10 @@ header span{
 
 }
 
-.header-text{
-    padding-top: 50px;
+.header-text {
+    padding: 20px 20px;
 }
+
 .about-col-1{
     flex-basis: 35%;
     flex-wrap: wrap;
