--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 body{
     background: #191919;
     color: #fff;
+    overflow-x: hidden;
+
 }
 header{
     width : 100%;
@@ -14,6 +16,7 @@ header{
     /*background-image: url(imgs/background\ Image.png);*/
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 .container{
     padding: 10px 10%;
